--- a/gb/nsc413_2.md
+++ b/gb/nsc413_2.md
@@ -1,4 +1,13 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/nexmjc248/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/nexmjc248/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11715995.md#1" target="_blank">绿党民调：近7成台湾民众对中共反感</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11715995.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/e44195dcfba381b7b1b223dec4e7e74caa-150x120.jpg" align ="left"></a>2020总统、立委选举进入倒数1个月，绿党11日公布最新民调，民进党总统蔡英文以48.9%支持度，大幅度领先国民党总统候选人韩国瑜的19.7%、亲民党宋楚瑜的8.3%；至于对中共的好感度方面，民调显示反感者高达近七成，有好感者则不到一成，显示民众不认同与中共靠拢。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 12:39 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11716196.md#1" target="_blank">今年逾八万中国房企停业 比去年增近40%</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11716196.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/08/0f3e56dd143ff14ec950e101fe9d9075-150x120.jpg" align ="left"></a>中国房地产相关企业的经营状况持续低迷，今年以来已经有超过八万家停业。进入年末，房企的销售压力持续，普遍存在资金问题，甚至一些大型房企也相继被曝债务激增甚至债务违约。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 12:34 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11716268.md#1" target="_blank">确保稀土供应 美军采取自二战以来紧急行动</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11716268.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Rareearthoxides-1-600x390-150x120.jpg" align ="left"></a>路透社看到的一份政府文件显示，美军计划为建造稀土加工设施提供资金，这是华盛顿紧急行动的部分举措，目标是确保可用于制造军事武器和电子产品的稀土的国内供应。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 12:00 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713539.md#1" target="_blank">中共介选台湾3管道 美学者：黑道 台商 宗教</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713539.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/02d2bed17e7ca46e084a6671f9d48970-150x120.jpg" align ="left"></a>2020总统选举进入倒数1个月，中共介入台湾选举的问题一直备受各界关注。“美国企业研究所”客座研究员马明汉（Michael Mazza）10日表示，从中长期来看，无论哪个政党执政，两岸关系都会走向负面发展，目前蔡政府很可能会连任，预料中共可能会加大对台湾的军事、经济压力。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 11:58 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11716131.md#1" target="_blank">华府人权日研讨会 国会议员声援3.47亿人退党</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11716131.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/191211090946100699-150x120.jpg" align ="left"></a>12月10日是国际人权日，“全球反迫害制止中共暴行、声援退党大潮”研讨会在美国国会举行。国会议员、中国问题专家和人权活动家共同探讨了退党对于中国社会产生的影响、共产主义蔓延的危害，关注中共二十年来对法轮功学员的残酷迫害。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 11:49 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11714758.md#1" target="_blank">加拿大国会特别委员会成立 审查加中关系</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11714758.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/5df0543ec6c22-150x120.jpg" align ="left"></a>联邦保守党外交评论员、众议员奥图尔（Erin O'Toole）周二（12月10日）呼吁特鲁多政府拿出实质行动来处理加中关系。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 11:20 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11716194.md#1" target="_blank">P2P倒了领导先跑 中国金融反腐藏特权</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11716194.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/0cfc7f1dfaca21a50d3e63edb3e4984a-150x120.jpg" align ="left"></a>中国官员腐败花招多，并反映热门时事。中共中央纪检委10日发布公告，金融领域官员除了收受贿赂，还利用职务之便，在清理网贷（P2P借贷）等案件上“特权挽损”，让自己先抽身。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 11:16 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11715875.md#1" target="_blank">解除民主派议员陈淑庄职务动议被否决</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11715875.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/photo_2019-11-06_11-46-05-150x120.jpg" align ="left"></a>香港区议会选举后，建制派对民主派“动手”。今天（12月11日），建制派立法会议员在大会上动议，解除民主派陈淑庄、邵家臻的议员职务。但因建制派只有40席，投票时，未能达到三分之二的要求，故此动议被否决。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 10:54 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11715977.md#1" target="_blank">台外长：若中共武力介入香港 台湾愿助港人</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11715977.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1MH2CN-150x120.jpg" align ="left"></a>台湾外交部长吴钊燮周二（12月10日）表示，台湾支持香港人民的自由与民主，如果中共以武力介入香港，镇压抗议者，台湾将会与国际社会一道帮助港人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 10:23 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11714459.md#1" target="_blank">美国制裁亲共港媒 星岛老板为何遭热议</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11714459.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912010333182188-150x120.jpg" align ="left"></a>日前，建制派内部传一名亲共香港富商坐专机飞抵美国，被问话三个小时后，被拒入境。有建制派立法会议员称这位富商是《星岛日报》老板何柱国。随后《文汇报》及《大公报》等香港中共喉舌媒体记者欲入美也被限制。《2019年香港人权与民主法案》和《保护香港法案》成为美国法律生效后，亲共媒体及代理人正式成美国制裁对象。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 9:47 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11714980.md#1" target="_blank">大陆司法界两贪官被逮捕 一人与周永康有关系</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11714980.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1511012105372382-600x400-1-150x120.jpg" align ="left"></a>12月11日，中共最高检察院发布消息称，中共吉林省检察院前党组书记、检察长杨克勤，海南省高级法院前党组成员、副院长张家慧均以涉嫌受贿罪被逮捕，案子均被移送起诉。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 8:17 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11715676.md#1" target="_blank">监警会国际专家集体请辞 林郑一脚踏空</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11715676.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1909260726301501-150x120.jpg" align ="left"></a>香港监警会稍早前邀请5名国际专家，协助审视香港警方在反修例中的行动和程序，但《华尔街日报》今日（11日）报导，这批国际专家组决定集体请辞。专家认为，特首林郑月娥原本寄望藉重国际专家的公信力，来为监警会“既有机制”背书，但显然这些国际专家不愿意被林郑和中共利用。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 8:13 PM							</td></tr>
@@ -24,20 +33,9 @@
 
 陈思明向大记元记者表示，“天赋人权。造物主创造人时就平等赋予了每个人不可剥夺的权利。很多中国人不知道自己有人权。要.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 11:35 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/8/n11708713.md#1" target="_blank">揭内蒙古莫旗看守所恶行 酷刑迫害法轮功</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/8/n11708713.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/2010-9-26-featurephotos-64_fLC3ND3-150x120.jpg" align ="left"></a>从1999年7月20日，中共和江泽民集团相互利用迫害法轮功以来，莫力达瓦旗（简称莫旗）看守所上至所长，下至狱警，积极参与迫害法轮功学员，使用的酷刑手段极其残忍。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 11:32 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713990.md#1" target="_blank">【思想领袖】专访邵岚：再揭港警性暴力</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713990.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/3019-06-1810.56-150x120.jpg" align ="left"></a>邵岚再次揭露了港警的性暴力及无人道行为。而北京当局多次力挺港警，使香港局势恶化。她认为，中共非常害怕这些保护人权及自由民主的思想传到中国大陆，从而压制各种民主运动。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 10:37 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11714625.md#1" target="_blank">【思想领袖】中共内部承认正走向解体（四）</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11714625.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/EET-Interview-150x120.jpg" align ="left"></a>英文《大纪元时报》资深记者杨杰凯（Jan Jekielek）近日在“美国思想领袖”节目中，对美国的中国问题专家、宾夕法尼亚大学国际关系和中国历史教授林蔚（亚瑟?沃尔德伦，Arthur Waldron）进行了专访。全文翻译如下：......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 10:25 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11714584.md#1" target="_blank">中国民企生存陷困境 “国资系”趁机收编</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11714584.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2010/03/1003181822012054-150x120.jpg" align ="left"></a>中国民营企业资金紧张的情况加剧，债务违约数量激增，今年以来相继有数十家上市民企转让股权、变更实际控制人，“国资系”也因此继续大规模“公私合营”，但民企实际业绩的改善依然令人堪忧。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 9:39 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11714227.md#1" target="_blank">被抹黑和造谣拿美国绿卡 黄之锋嘲讽五毛伪造</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11714227.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1909131000532384-150x120.jpg" align ="left"></a>香港众志秘书长黄之锋自2014年参与“占中”运动以来，一直成为中共的眼中钉。今年6月香港爆发“反送中”运动后，他被中共党媒新华社戴上“港独组织头目”的大帽，并常常遭到五毛攻击和抹黑。10日晚，黄之锋在facebook(fb)转发一张被伪造的美国绿卡，并嘲讽道：“五毛和小粉红们要注意喔！”
-
-10日晚，黄之锋在fb转发一位网友上传的贴有他本人照片的美国工卡.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 7:44 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713973.md#1" target="_blank">中共限古令再升级 各平台每月限播一部古装剧</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713973.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/1810092140002662-150x120.jpg" align ="left"></a>近日，大陆多家影视上市公司高管及业内知名编剧团队人士证实，早前中共广电总局多次朝令夕改的“限古令”现在不仅没有解禁，而且再度升级。具体体现为，自12月起，各个播放平台每月只可播出一部古装剧。鉴于此，许多影视公司已经完全放弃古装剧。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 7:40 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11714478.md#1" target="_blank">美学界与智库报告：中共大撒币外交难买人心</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11714478.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/Capture-8-150x120.jpg" align ="left"></a>美国学界与智库10日公布一份有关中共外交的最新研究报告显示，近几年来，北京外交预算倍增，达人民币600亿元；不过，北京“大撒币式”的外交，似乎没有赢得更多正面形象与友谊。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 7:36 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11714340.md#1" target="_blank">惠誉：中国民企违约率创新高 明年风险持续</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11714340.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2010/03/1003181822012054-150x120.jpg" align ="left"></a>惠誉评级机构（Fitch Ratings）中国企业研究董事黄筱婷12月10日表示， 中国民营企业的境内债券违约率今年前11个月创历史新高。分析表示，中国民企面临资金链危机、融资难、受到国企和中共政府政策挤压的问题，其生存环境堪忧。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 7:14 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11714293.md#1" target="_blank">中共空军0:4败于泰军 空军大校演讲泄真相</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11714293.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/6d4862f1955d324ee753fe211f5d1b64-150x120.jpg" align ="left"></a>号称全球军事实力第三的中共国家，其真实军事实力到底如何呢？中共空军大校在一次内部报告中揭露了真相。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 7:09 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11715991.md#1" target="_blank">中共否认介入台大选 陆委会：事实胜于雄辩</a><br></h3>国际多次提醒中共意图干预台湾大选，近期北京再抛“对台26项措施”，国台办却称“我们从来都不介入台湾地区选举”。对此，陆委会11日表示，事实胜于雄辩，“26条措施”就是赤裸裸介入台湾选举。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 12:35 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11715631.md#1" target="_blank">内蒙古通辽市高速路上大客车侧翻 致53伤</a><br></h3>12月11日上午10时5分左右，内蒙古通辽市高速G2511高速公路甘旗卡段124km处，发生一起大客车侧翻事故，导致53人受伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 7:15 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11714983.md#1" target="_blank">天津街道书记贪3亿囚18年 每天躺钱上睡觉</a><br></h3>上月25日，天津市滨海新区寨上街道前工委书记陈玉慧，因贪污、受贿等多罪，被判处有期徒刑18年、罚款140万元人民币（下同）。其案涉及金额高达3.17亿元。陈玉慧被指每天躺在钱上睡觉，向他行贿的恶势力头目因其太贪而绝交。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 4:49 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11714843.md#1" target="_blank">河南一村民用三轮摩托载6人坠崖 6死1伤</a><br></h3>12月10日下午，河南省巩义市发生一起三轮摩托车意外坠崖伤亡事件，致6人死亡1人受伤，伤者尚未脱离生命危险。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 1:23 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11714742.md#1" target="_blank">唐山地震后北京昌平又地震 网民：今年反常</a><br></h3>中国地震台网正式测定，昨晚深夜，即12月10日22时28分，北京昌平区（北纬40.30度，东经116.37度）发生2.0级地震，震源深度18千米。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 10:37 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713536.md#1" target="_blank">淄博公安局张南分局前610主任罗忠被举报</a><br></h3>山东淄博市公安局张南分局前“610”主任罗忠直接参与迫害当地至少几十名法轮功学员，现被举报到明慧网。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 7:03 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc413.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc413_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc413_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc413_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/nexmjc248/djy/blob/master/gb/nsc413_2.md#1<br><a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc413_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/nexmjc248/djy/blob/master/gb/nsc413_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc413_2.htm">http://www.epochtimes.com/gb/nsc413_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
