--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -30,7 +30,7 @@
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11711594.md#1" target="_blank">试着说爱</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11711594.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Fotolia_43183494_Subscription_L-150x120.jpg" align ="left"></a>把爱说出口，并不是那么困难。时常把爱挂在嘴边，必定能促进家人之间的关系。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 2:39 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11711261.md#1" target="_blank">青松絮语：免费理发</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11711261.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/04/kite-150x120.jpg" align ="left"></a>拖着厚重的面子，我们畏首畏尾，对正常的社会交换也感到胆怯。如果抛却那种种顾虑，坦坦荡荡面对一切，既能真诚待人，又能豁达行事，对“免费理发”这样的事也不心生排斥，岂不是更好吗？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 11:06 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11710880.md#1" target="_blank">散落人间的文字：雨夜的花蕊</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11710880.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/04/a9d60b2945414dc9d2c3d584ddd70c2c-150x120.jpg" align ="left"></a> 雨夜花雨夜花 受风雨吹落地 无人看见瞑日怨嗟 花谢落土不再回 花落土花落土 有谁人倘看顾 无情风雨误阮前途 花蕊若落要如何......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 8:34 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/29/n11690587.md#1" target="_blank">轮回中“我是谁”？前世为僧 今生为官</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/29/n11690587.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1901091505412483-150x120.jpg" align ="left"></a>前世他是僧人，因一领袈裟结下今世夫妻之缘；他前世是独眼僧，今世成为一代文豪，屡遭贬官，忘却荣辱；他今世是太守，却被友人戏称为“行脚僧”。迥然不同的二世风貌，原来都是自己。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 5:59 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11711043.md#1" target="_blank">七律：意</a><br></h3>不忍严冬萧瑟漫， 细寻生意踏冰河。 多情垂柳摇金发， 沉默杉松耸玉柯。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 12:12 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11716173.md#1" target="_blank">五律：黄昏</a><br></h3>寒鼓夕阳阔，落霞天际悠。 飞鸿成一点，逝景合长流。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 10:33 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713631.md#1" target="_blank">五绝：证悟</a><br></h3> 念出妖魔灭，神威止恶凶。 善行千万里，入定一棵松。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 10:11 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11711109.md#1" target="_blank">虞美人．忧</a><br></h3> 严冬万木萧疏处，一片忧伤度。 干枯栎叶不离枝，但有风来声瑟感心知。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 12:13 PM			</td></tr>
